--- a/app/src/main/res/layout/fragment_insertar_album.xml
+++ b/app/src/main/res/layout/fragment_insertar_album.xml
@@ -16,15 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Año"/>
-    <Button
-        android:id="@+id/seleccionarPortada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/ic_menu_gallery" />
     <ImageView
-        android:id="@+id/previsualizarPortada"
+        android:id="@+id/portada"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_add_photo_alternate_24"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center"/>
     <Button
         android:id="@+id/insertar"
         android:layout_width="match_parent"
